# zserio-template

./: CMakeLists.txt  README.md  zserio_regen.bash
demo/: CMakeLists.txt
demo/src/: main.cpp
demo/src/ext/: Ext.cpp  Ext.h  Type.cpp  Type.h  ValueChoice.cpp  ValueChoice.h
demo/src/host/: Header.cpp  Header.h  Map.cpp  Map.h  MapList.cpp  MapList.h  MapListParams.cpp  MapListParams.h  Value.cpp  Value.h
schema/: ext.zs  host.zs
src/: main.cpp
